--- a/marlo-ciat/marlo-ciat-web/pom.xml
+++ b/marlo-ciat/marlo-ciat-web/pom.xml
@@ -13,8 +13,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<struts2.version>2.3.16</struts2.version>
-		<struts2-json.version>2.3.16</struts2-json.version>
+		<struts2.version>2.3.32</struts2.version>
+		<struts2-json.version>2.3.32</struts2-json.version>
 		<guice.version>3.0</guice.version>
 		<mysql.version>5.1.39</mysql.version>
 		<junit.version>4.12</junit.version>
@@ -63,9 +63,41 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-java8-support-plugin</artifactId>
+			<version>2.3.32</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.struts.xwork</groupId>
+			<artifactId>xwork-core</artifactId>
+			<version>2.3.31</version>
+			<exclusions>
+				<exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm-commons</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>org.cgiar.ciat.auth</groupId>
 			<artifactId>adauth</artifactId>
 			<version>1.6</version>
+		</dependency>
+		<!-- Struts 2 Rest Plugin -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-convention-plugin</artifactId>
+			<version>2.3.32</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-rest-plugin</artifactId>
+			<version>2.3.32</version>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
@@ -532,10 +564,10 @@
 			<url>file://${basedir}/src/main/resources/libs/</url>
 		</repository>
 		<!-- Pentaho Maven repo -->
-    <repository>
-      <id>pentaho-releases</id>
-      <url>http://repository.pentaho.org/artifactory/repo/</url>
-    </repository>
+		<repository>
+			<id>pentaho-releases</id>
+			<url>http://repository.pentaho.org/artifactory/repo/</url>
+		</repository>
 	</repositories>
 	<licenses>
 		<license>
